examples/qualification/executable_module_entry/negative_multi_hop_cycle_bare_import/src/c.sm
Import "a.sm"

fn score_c() -> i32 {
    return score_a();
}
